// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/features should render 1`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render column classes 1`] = `
"<!-- wp:coblocks/features {"columns":1} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-1-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render column classes 2`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render column classes 3`] = `
"<!-- wp:coblocks/features {"columns":3} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-3-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render column classes 4`] = `
"<!-- wp:coblocks/features {"columns":4} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-4-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render content align classes 1`] = `
"<!-- wp:coblocks/features {"contentAlign":"left"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-left-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render content align classes 2`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render content align classes 3`] = `
"<!-- wp:coblocks/features {"contentAlign":"right"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-right-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render gutter classes 1`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content has-small-gutter"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render gutter classes 2`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content has-medium-gutter"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render gutter classes 3`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content has-large-gutter"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 1`] = `
"<!-- wp:coblocks/features {"headingLevel":1} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 2`] = `
"<!-- wp:coblocks/features {"headingLevel":2} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 3`] = `
"<!-- wp:coblocks/features {"headingLevel":3} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 4`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 5`] = `
"<!-- wp:coblocks/features {"headingLevel":5} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render heading levels 6`] = `
"<!-- wp:coblocks/features {"headingLevel":6} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render margin classes 1`] = `
"<!-- wp:coblocks/features {"marginSize":"small"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-margin has-small-margin has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render margin classes 2`] = `
"<!-- wp:coblocks/features {"marginSize":"medium"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-margin has-medium-margin has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render margin classes 3`] = `
"<!-- wp:coblocks/features {"marginSize":"large"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-margin has-large-margin has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render padding classes 1`] = `
"<!-- wp:coblocks/features {"paddingSize":"small"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-padding has-small-padding has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render padding classes 2`] = `
"<!-- wp:coblocks/features {"paddingSize":"medium"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-padding has-medium-padding has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render padding classes 3`] = `
"<!-- wp:coblocks/features {"paddingSize":"large"} -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-padding has-large-padding has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render text color 1`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-text-color has-333333-color has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;

exports[`coblocks/features should render with appropriate id class 1`] = `
"<!-- wp:coblocks/features -->
<div class="wp-block-coblocks-features coblocks-features-1234"><div class="wp-block-coblocks-features__inner has-columns has-2-columns has-responsive-columns has-center-content"></div></div>
<!-- /wp:coblocks/features -->"
`;
